# dns-mollusc

./: MANIFEST.in  README.md  pytest.ini  setup.cfg  tests.py
.github/workflows/: ci.yml
dns_mollusc/: __init__.py  client.py  response.py
doh_client_py3/: __init__.py  client.py  doh_client_py3.py
simple_doh_client/: __init__.py  client.py  record.py
tests/: blocking.py  servers.py
